--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 certifi==2023.7.22
 charset-normalizer==3.2.0
 emoji==2.6.0
+freezegun==1.4.0
 idna==3.4
 munch==4.0.0
 Pillow==10.0.1
 pilmoji==2.0.3
 pygame==2.5.1
+python-dateutil==2.8.2
 requests==2.31.0
+six==1.16.0
 urllib3==2.0.7
