--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ license = { file = "LICENSE" }
 classifiers = [
     "Programming Language :: Python :: 3"
 ]
+
 dependencies = [
     "Pillow>=10.2.0",
     "pygame>=2.5.1",
@@ -27,6 +28,10 @@ dependencies = [
 [project.urls]
 Homepage = "https://github.com/tajhlande/lmae"
 Issues = "https://github.com/tajhlande/lmae/issues"
+
+[tool.setuptools]
+py-modules =  [ "lmae" ]
+include-package-data = true
 
 [tool.setuptools.dynamic]
 version = {attr = "lmae.VERSION"}
