--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,11 @@ emoji==2.6.0
 freezegun==1.4.0
 idna==3.7
 munch==4.0.0
-Pillow==10.3.0
+pillow==10.3.0
 pilmoji==2.0.3
 pygame==2.5.1
 python-dateutil==2.8.2
 requests==2.32.2
 six==1.16.0
+sqlite3-cache==0.2.1
 urllib3==2.2.2
