--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+build==1.0.3
 certifi==2024.7.4
 charset-normalizer==3.2.0
 emoji==2.6.0
 freezegun==1.4.0
 idna==3.7
 munch==4.0.0
+packaging==23.2
 pillow==10.3.0
 pilmoji==2.0.3
+psutil==7.0.0
 pygame==2.5.1
+pyproject_hooks==1.0.0
 python-dateutil==2.8.2
 requests==2.32.2
 six==1.16.0
